k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: procurement
  labels:
    kubernetes.io/metadata.name: procurement
    app.kubernetes.io/part-of: procurement-portal
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    kubernetes.io/metadata.name: monitoring
    app.kubernetes.io/part-of: procurement-portal
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    kubernetes.io/metadata.name: logging
    app.kubernetes.io/part-of: procurement-portal
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    kubernetes.io/metadata.name: infra
    app.kubernetes.io/part-of: procurement-portal
